# axcl-pipeline

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: sample_demux_npu_rtsp.cpp
src/ffmpeg/: AXFFmpegDecoder.hpp  AXFFmpegEncoder.hpp  AXFFmpegPipe.hpp
src/utils/: def.h
